# dfx-swiss-rs

./: .gitignore  Cargo.toml  README.md
dfx-swiss-sdk/: Cargo.toml
dfx-swiss-sdk-raw/: Cargo.toml  README.md
dfx-swiss-sdk-raw/.openapi-generator/: FILES
dfx-swiss-sdk-raw/docs/: AccountChangedWebhookData.md  ApiKeyDto.md  AssetDto.md  AssetLimitsDto.md  AuthLnurlSignInResponseDto.md  AuthLnurlStatusResponseDto.md  AuthMailDto.md  AuthResponseDto.md  BankAccountApi.md  BankAccountDto.md  BankApi.md  BankDto.md  BuyApi.md  BuyDto.md  BuyQuoteDto.md  ConfirmDto.md  ContactPersonData.md  CountryApi.md  CountryDto.md  CreateBankAccountDto.md  CreateCustodyAccountDto.md  CreatePaymentLinkDto.md  CreateSupportMessageDto.md  CustodyApi.md  CustodyAuthDto.md  CustodyBalanceDto.md  CustodyFiatValueDto.md  CustodyHistoryDto.md  CustodyHistoryEntryDto.md  CustodyOrderBuyResponseDto.md  CustodyOrderDto.md  CustodyOrderResponseDto.md  FeeDto.md  FiatApi.md  FiatDetailDto.md  FiatDto.md  FiatLimitsDto.md  FrankencoinApi.md  GetBuyPaymentInfoDto.md  GetCustodyInfoDto.md  (+56 more)
dfx-swiss-sdk-raw/src/apis/: asset_api.rs  auth_api.rs  bank_api.rs  buy_api.rs  country_api.rs  custody_api.rs  fiat_api.rs  frankencoin_api.rs  kyc_api.rs  kyc_client_api.rs  language_api.rs  lnurl_api.rs  support_api.rs  swap_api.rs  user_api.rs
dfx-swiss-sdk-raw/src/models/: account_changed_webhook_dto.rs  api_key_dto.rs  asset_detail_dto.rs  asset_limits_dto.rs  auth_lnurl_create_login_response_dto.rs  auth_lnurl_status_response_dto.rs  bank_dto.rs  beneficiary_dto.rs  buy_dto.rs  buy_payment_info_dto.rs  buy_quote_dto.rs  contact_person_data.rs  entity_dto.rs  (+63 more)
dfx-swiss-sdk/examples/: debug_json.rs  monero_auth.rs
dfx-swiss-sdk/src/: lib.rs
(+120 files in other folders)
