[workspace]
members = [
    "dfx-swiss-sdk-raw",
    "dfx-swiss-sdk"
]
resolver = "2"

[workspace.dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = { version = "^0.11", features = ["json", "multipart"] }

[patch.crates-io]
monero = { git = "https://github.com/comit-network/monero-rs", rev = "818f38b" }